@@ -17,6 +17,7 @@ New:
  - Add F11 and F12 for macro use
  - Fixed DTR for recent systems
  - Add support for RS485.
+ - Add --capturefile-buffer-mode option
  - Bug fixes
 
 New for for version 2.7:
